kubernetes/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: mongodb-deployment
  namespace: development

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb-container
          image: mongo:7
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
          imagePullPolicy: Always
