kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb-service
  namespace: application

spec:
  selector:
    app: mongodb

  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

  type: ClusterIP
